# Codewars-practice

./: Manifest.toml  README.md  pyproject.toml
notebooks/: scratchpad.ipynb  scratchpad_julia.ipynb
src/: getCount.jl  highest_and_lowest.py  sumOfMultiples.jl  who_likes_it.py
tests/: testGetCount.jl  testSumOfMultiples.jl  test_highest_and_lowest.py  test_who_likes_it.py
