[tool.poetry]
name = "codewars-practice"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
pytest = "^7.4.3"
ipywidgets = "^8.1.1"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
